--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,13 @@
 [x-cloak] {
     display: none;
 }
+
+
+.font-family-karla { font-family: karla; }
+.bg-sidebar { background: #3957F9;}
+.cta-btn { color: #3d68ff; }
+.upgrade-btn { background: #1947ee; }
+.upgrade-btn:hover { background: #0038fd; }
+.active-nav-link { background: #1947ee; }
+.nav-item:hover { background: #1947ee; }
+.account-link:hover { background: #3d68ff; }
