--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,3 +15,7 @@
 .active-nav-link { background: #1947ee; }
 .nav-item:hover { background: #1947ee; }
 .account-link:hover { background: #3d68ff; }
+
+.bg-ef4444 {
+    background-color: #ef4444;
+}
